# podcast-manager

./: .env.example  .gitignore  COMPLETE-SETUP.md  FRONTEND-SETUP.md  GIT-DEPLOYMENT-GUIDE.md  GIT-QUICK-START.md  HTML-SANITIZATION.md  HTML-SECURITY-SUMMARY.md  OPML-DUPLICATE-FIX.md  PHASE3-DOWNLOADS.md  PHASE4-BACKGROUND-JOBS.md  PLEX-INTEGRATION.md  PLEX-SETUP.md  README.md  ROCKY-LINUX-INSTALL.md  ROCKY-LINUX-QUICKSTART.md  TESTING.md  alembic.ini  get_plex_token.py  init-db.sh  install-rocky-linux.sh  manage.sh  nginx-podcast-manager.conf  podcast-manager-backend.service  podcast-manager-frontend-dev.service  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  setup.py  test_api.sh  test_background_jobs.sh  test_downloads.sh  test_duplicate_handling.py  test_html_sanitizer.py  test_opml.py  test_podcasts.opml  update.sh
frontend/: index.html  package.json
frontend/src/: App.vue  style.css
frontend/src/components/: DownloadItem.vue  EpisodeItem.vue  PodcastCard.vue
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/stores/: podcast.js
frontend/src/views/: AddPodcastView.vue  DownloadsView.vue  HomeView.vue  JobsView.vue  OPMLView.vue  PodcastDetailView.vue
scripts/: init_db.py
src/podcastmanager/: config.py  main.py
src/podcastmanager/api/: dependencies.py  routes.py  schemas.py
src/podcastmanager/core/: download_engine.py  exceptions.py  podcast_manager.py  rss_parser.py
src/podcastmanager/db/: database.py  models.py
src/podcastmanager/db/migrations/: env.py
src/podcastmanager/services/: download_service.py  file_manager.py  opml.py  plex_service.py
src/podcastmanager/tasks/: jobs.py  worker.py
src/podcastmanager/utils/: html_sanitizer.py  logging.py  validators.py
